--- a/nbs/index.ipynb
+++ b/nbs/index.ipynb
@@ -6,8 +6,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#| hide\n",
-    "from ai_learning.core import *"
+    "#| hide"
    ]
   },
   {
